# news-bot

./: .env  .gitignore  pyproject.toml  requirements.txt  telethon_session.session  telethon_session.session-journal
.github/workflows/: deploy.yaml
app/: main.py
app/bot/: instance.py  settings.py
app/bot/handlers/: news.py  start.py
app/bot/keyboards/: news.py
app/config/: settings.py  telethon.py
app/routes/: webhook.py
app/scheduler/: setup.py
app/services/: kunuz_watcher.py
app/utils/: cache.py  helpers.py  logger.py  redis.py  time.py  trim.py
