[project]
name = "news-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "hojiakbar2806",email = "hojiakbarnasriddinov2006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.116.0,<0.117.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "telethon (>=1.40.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
